# beehive

./: .beehive-system-prompt.txt  .gitignore  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_TEST_REPORT.md  WORKTREES.md  WORKTREE_IMPLEMENTATION.md  bitbook-project.yaml  install.sh  pyproject.toml  setup.py  site-architect.yaml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: deploy-site.yaml  release.yml
Formula/: beehive.rb
beehive/: __init__.py  __main__.py  cli.py  cli_architect.py  cli_project.py  cli_researcher.py
beehive/core/: __init__.py  architect.py  architect_storage.py  config.py  cto.py  docker_manager.py  git_ops.py  planner.py  pr_creator.py  preview.py  project.py  project_storage.py  research_planner.py  researcher.py  researcher_storage.py  session.py  storage.py  tmux_manager.py
beehive/tui/: __init__.py  app.py  modals.py  styles.tcss
beehive/utils/: __init__.py  config.py  logger.py
examples/: basic_usage.sh  parallel_workflow.sh
scripts/: generate_formula.py
site/: index.html  package-lock.json  package.json
site/public/: install.sh
site/src/: App.css  App.tsx  CodeBlock.css  CodeBlock.tsx  index.css
tests/: __init__.py  test_architect.py  test_config.py  test_git_ops.py  test_project.py  test_session.py  test_storage.py
tests/docker/: Dockerfile.install-test  test_install.sh
